# ARMD-transformers

./: .gitignore  README.md  SETUP_LMOD.md  activate_env.sh  salloc.sh  setup_environment.sh  train_slurm.sh
qwen3_training_setup/: CHECKLIST.md  DEEPSPEED_GUIDE.md  IMPLEMENTATION.md  QUICK_REFERENCE.md  QWEN-arch.txt  README.md  SETUP.md  SETUP_COMPLETE.md  WANDB_SETUP.md  ds_config_zero2.json  example_train_commands.sh  pyproject.toml  quickstart.sh  quickstart.sh.backup  train.sh  train_deepspeed.sh  train_deepspeed_zero2.sh
qwen3_training_setup/configs/: surgery_config.yaml  training_config.yaml
qwen3_training_setup/data/: README.md
qwen3_training_setup/scripts/: inference_test.py  model_report.py  train.py  train_with_surgery.py
qwen3_training_setup/src/: __init__.py  data_utils.py  model_wrapper.py  training_utils.py
