[project]
name = "qwen3-training-setup"
version = "0.1.0"
description = "Clean training setup for Qwen3-0.6B based on official Transformers implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers>=4.50.0",
    "accelerate>=0.34.0",
    "datasets>=2.14.0",
    "tokenizers>=0.15.0",
    "sentencepiece>=0.1.99",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.24.0",
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
    "wandb>=0.16.0",  # Optional: for experiment tracking
    "tensorboard>=2.14.0",  # Optional: for logging
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "ipython>=8.14.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.black]
line-length = 120
target-version = ["py312"]
